--- a/demos/recipes/recipes.css
+++ b/demos/recipes/recipes.css
@@ -22,7 +22,7 @@
 
 .dark .slider-features ul li:not(:last-child) { border-right-color: rgba(255, 255, 255, 0.2); }
 
-.recipe-itmes .card img,
+/*.recipe-itmes .card img,
 .rotating {
 	transform: rotate(0deg);
 	transition: transform 1.5s linear;
@@ -33,6 +33,7 @@
 	transform: rotate(360deg);
 	transition: transform 20s linear;
 }
+*/
 
 .categories {
 	position: relative;
@@ -318,7 +319,7 @@ ol.list-preparation li:not(:first-child) { padding-top: 18px; }
 		top: 50%;
 		right: 0;
 		height: 60px;
-		width: 45%;
+		width: 50%;
 		transform: translateY(-50%);
 		background-color: rgba(255, 255, 255, 1);
 		box-shadow: 0 0.5rem 1.3rem rgba(0, 0, 0, 0.2);
